--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 						<div class="m-b-2">
 				        	<p class="text-opac lead">Digite no campo abaixo a sua tarefa, em seguida pressione ENTER.</p>
+				        	<p><small>*Se você alterar o nome do item na lista já criada, ao sair do input ele irá salvar ;)</small></p>
 
 							<form class="input-group" id="todo-form" ng-submit="addTodo()">
 						      <input type="text" class="form-control form-control-lg form-control-opac input-outer" autofocus="" ng-model="newTodo" placeholder="Tarefa...">
